--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="header-content">
         <header>
           <nav>
-            <details open>
+            <details>
               <summary>
                 <p>Variantes del proyecto</p>
               </summary>
@@ -38,16 +38,16 @@
               </summary>
               <ol>
                 <li>
-                  <a href="#">Google Chrome</a>
+                  <a href="#chrome">Google Chrome</a>
                 </li>
                 <li>
-                  <a href="#">Visual Studio Code</a>
+                  <a href="#vsc">Visual Studio Code</a>
                 </li>
                 <li>
-                  <a href="#">Figma</a>
+                  <a href="#figma">Figma</a>
                 </li>
                 <li>
-                  <a href="#">GitHub</a>
+                  <a href="#github">GitHub</a>
                 </li>
               </ol>
             </details>
@@ -58,22 +58,22 @@
               </summary>
               <ol>
                 <li>
-                  <a href="#">Qué es HTML</a>
+                  <a href="#html">Qué es HTML</a>
                 </li>
                 <li>
-                  <a href="#"> Etiquetas</a>
+                  <a href="#etiquetas"> Etiquetas</a>
                 </li>
                 <li>
-                  <a href="#">DOM</a>
+                  <a href="#dom">DOM</a>
                 </li>
                 <li>
-                  <a href="#">Semántica</a>
+                  <a href="#semantica">Semántica</a>
                 </li>
                 <li>
-                  <a href="#">Atributos</a>
+                  <a href="#atributos">Atributos</a>
                 </li>
                 <li>
-                  <a href="#">Qué es CSS</a>
+                  <a href="#css">Qué es CSS</a>
                 </li>
               </ol>
             </details>
@@ -104,7 +104,7 @@
           </h2>
 
           <img src="./images/Google Chrome.png" alt="Logo Google Chrome" title="Google Chrome">
-          <h3>
+          <h3 id="chrome">
             Google Chrome
           </h3>
           <p>
@@ -113,7 +113,7 @@
           </p>
 
           <img src="./images/Visual Studio Code.png" alt="Logo Visual Studio Code" title="Visual Studio Code">
-          <h3>
+          <h3 id="vsc">
             Visual Studio Code
           </h3>
           <p>
@@ -123,7 +123,7 @@
           </p>
 
           <img src="./images/Figma.png" alt="Logo Figma" title="Figma">
-          <h3>
+          <h3 id="figma">
             Figma
           </h3>
           <p>
@@ -132,7 +132,7 @@
           </p>
 
           <img src="./images/GitHub.png" alt="Logo GitHub" title="GitHub">
-          <h3>
+          <h3 id="github">
             GitHub
           </h3>
           <p>
@@ -158,7 +158,7 @@
             Conceptos esenciales del Desarrollo Web
           </h2>
 
-          <h3>
+          <h3 id="html">
             Qué es HTML
           </h3>
           <p>
@@ -180,7 +180,7 @@ content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
 &lt;/html&gt;
               </pre>
 
-          <h3>
+          <h3 id="etiquetas">
             Etiquetas
           </h3>
           <p>
@@ -194,7 +194,7 @@ content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
             parte de tu día a día como Software Developer.
           </p>
 
-          <h3>
+          <h3 id="dom">
             DOM
           </h3>
           <p>
@@ -204,7 +204,7 @@ content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
           </p>
           <img src="./images/dom.png" alt="DOM" title="DOM">
 
-          <h3>
+          <h3 id="semantica">
             Semántica
           </h3>
           <p>
@@ -219,7 +219,7 @@ content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
             diferentes puedan entender cada contenido.
           </p>
 
-          <h3>
+          <h3 id="atributos">
             Atributos
           </h3>
           <p>
@@ -230,7 +230,7 @@ content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
             atributos funcionan en solo alguna etiquetas como src.
           </p>
 
-          <h3>
+          <h3 id="css">
             CSS
           </h3>
           <p>
