--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="header-content">
         <header>
           <nav>
-            <details>
+            <details class="variant">
               <summary>
                 <p>Variantes del proyecto</p>
               </summary>
@@ -171,8 +171,7 @@
 &lt;html lang=&quot;en&quot;&gt;
 &lt;head&gt;
 &lt;meta charset=&quot;UTF-8&quot;&gt;
-&lt;meta name=&quot;viewport&quot;
-content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+&lt;meta name=&quot;viewport&quot;content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
 &lt;title&gt;Document&lt;/title&gt;
 &lt;/head&gt;
 &lt;body&gt;
