--- a/index.html
+++ b/index.html
@@ -280,11 +280,42 @@
             <li>padding-block | padding-inline | padding-block-start | padding-block-end | padding-inline-start |
               padding-inline-end</li>
           </ul>
-
-          <p>
-            Si tienes alguna pregunta escríbeme a me@leonidasesteban.com
-          </p>
         </section>
+        <section class="section-content">
+          <div class="slider">
+            <scroll-container class="slider-container">
+              <scroll-page class="slider-slide" id="video1">
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/7nJz7jdMxCw"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
+              </scroll-page>
+
+              <scroll-page class="slider-slide" id="video2">
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/ykGjnGlpWJE"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
+              </scroll-page>
+
+              <scroll-page class="slider-slide" id="video3">
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/5KYhqn2s9XA"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
+              </scroll-page>
+            </scroll-container>
+            <div class="bullets">
+              <a class="bullet" href="#video1"></a>
+              <a class="bullet" href="#video2"></a>
+              <a class="bullet" href="#video3"></a>
+            </div>
+          </div>
+        </section>
+
+        <p>
+          Si tienes alguna pregunta escríbeme a me@leonidasesteban.com
+        </p>
       </div>
     </div>
   </main>
