--- a/index.html
+++ b/index.html
@@ -306,16 +306,25 @@
               </scroll-page>
             </scroll-container>
             <div class="bullets">
-              <a class="bullet" href="#video1"></a>
+              <a class="bullet bullet-is-select" href="#video1"></a>
               <a class="bullet" href="#video2"></a>
               <a class="bullet" href="#video3"></a>
             </div>
           </div>
         </section>
 
-        <p>
-          Si tienes alguna pregunta escríbeme a me@leonidasesteban.com
+        <p class="info">
+          Si tienes alguna pregunta escríbeme a <a href="me@leonidasesteban.com"> me@leonidasesteban.com</a>
         </p>
+
+        <div class="section-content">
+          <h2 class="newsletter">Suscríbete a nuestro newsletter</h2>
+          <form action="#" class="form">
+            <input type="text" required placeholder="Nombre">
+            <input type="email" required placeholder="Correo electrónico">
+            <input type="submit" value="Suscribirme">
+          </form>
+        </div>
       </div>
     </div>
   </main>
