--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/nemium-a/main.css">
   <title>Html y Css</title>
   <meta property="og:title" content="Mi proyecto del Curso esencial de HTML y CSS" />
   <meta property="og:type" content="website" />
@@ -46,15 +46,15 @@
                 <p>Variantes del proyecto</p>
               </summary>
               <ul>
-                <li>Nemium A</li>
-                <li class="is-active">Nemium B</li>
+                <li class="is-active">Nemium A</li>
+                <li><a href="./nemium-b.html"> Nemium B</a></li>
                 <li>Nemium C</li>
                 <li>Nemium D</li>
                 <li>Nemium E</li>
               </ul>
             </details>
 
-            <details open>
+            <details>
               <summary>
                 <p>Contenido</p>
               </summary>
@@ -74,7 +74,7 @@
               </ol>
             </details>
 
-            <details open>
+            <details>
               <summary>
                 <p>Conceptos esenciales del Desarrollo Web</p>
               </summary>
@@ -125,42 +125,43 @@
             Setup
           </h2>
 
-          <img src="./images/Google Chrome.png" alt="Logo Google Chrome" title="Google Chrome">
+          <img src="./images/light/Google Chrome.png" alt="Logo Google Chrome" title="Google Chrome">
           <h3 id="chrome">
             Google Chrome
           </h3>
           <p>
-            Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y
-            herramientas de desarrollo avanzadas y de amigable uso.
+            Chrome va a ser <span>el navegador que utilizaremos en el curso</span> por su extenso soporte de nuevos
+            estándares y herramientas de desarrollo avanzadas y de amigable uso.
           </p>
 
-          <img src="./images/Visual Studio Code.png" alt="Logo Visual Studio Code" title="Visual Studio Code">
+          <img src="./images/light/Visual Studio Code.png" alt="Logo Visual Studio Code" title="Visual Studio Code">
           <h3 id="vsc">
             Visual Studio Code
           </h3>
           <p>
-            Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la
-            capacidad de extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin
-            importar el lenguaje en el que se desemvuelva.
+            Visual Studio Code es el <span>editor de texto más popular y potente del mercado actualmente</span>, su
+            fácil uso y la capacidad de extenderlo por medio de plugins lo hace el complemento perfecto para cualquier
+            programador sin importar el lenguaje en el que se desemvuelva.
           </p>
 
-          <img src="./images/Figma.png" alt="Logo Figma" title="Figma">
+          <img src="./images/light/Figma.png" alt="Logo Figma" title="Figma">
           <h3 id="figma">
             Figma
           </h3>
           <p>
             Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su
-            implementación por su fácil uso porque puede ser usado directamente desde el navegador.
+            implementación por su <span>fácil uso</span> porque puede ser usado directamente desde el navegador.
           </p>
 
-          <img src="./images/GitHub.png" alt="Logo GitHub" title="GitHub">
+          <img src="./images/light/GitHub.png" alt="Logo GitHub" title="GitHub">
           <h3 id="github">
             GitHub
           </h3>
           <p>
-            Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores
-            de todo el mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open
-            source” o guardarlo de manera privada, Github será esencial para almacenar tu futuro portafolio.
+            Así como en Facebook te encuentran tus amigos, en Github <span>te encuentran otras programadoras y
+              programadores</span> de todo el mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes
+            elegir hacerlo “open source” o guardarlo de manera privada, Github será esencial para almacenar tu futuro
+            portafolio.
           </p>
 
           <blockquote>
@@ -168,9 +169,7 @@
               “Este es el inicio de tu carrera como Desarrollador Web”
             </p>
             <p>
-              <span>
-                Leonidas Esteban
-              </span>
+              Leonidas Esteban
             </p>
           </blockquote>
         </section>
@@ -223,7 +222,7 @@
             árbol genealógico fuera: padres, hijos, hermanos con niveles infinitos. cuando entendemos esta anidación
             podemos identificar dependencias, herencias en css y que tan complejo es nuestro proyecto.
           </p>
-          <img src="./images/dom.png" alt="DOM" title="DOM">
+          <img src="./images/light/dom.png" alt="DOM" title="DOM">
 
           <h3 id="semantica">
             Semántica
@@ -259,7 +258,7 @@
             para
             describir la presentación de documentos HTML.
           </p>
-          <img src="./images/image 5.png" alt="CSS" title="CSS">
+          <img src="./images/light/css.png" alt="CSS" title="CSS">
         </section>
 
         <section class="section-content">
@@ -350,6 +349,18 @@
       </div>
     </div>
   </main>
+
+  <footer class="footer">
+    <p>
+      © Leonidas Esteban 2021
+    </p>
+    <div class="social">
+      <a href="#"><img src="./icons/light/instagram.svg"></a>
+      <a href="#"><img src="./icons/light/facebook.svg"></a>
+      <a href="#"><img src="./icons/light/twitter.svg"></a>
+    </div>
+
+  </footer>
 </body>
 
 </html>
