--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
         <div class="section-content">
           <h2 class="newsletter">Suscríbete a nuestro newsletter</h2>
           <form action="#" class="form">
-            <input type="text" required placeholder="Nombre">
-            <input type="email" required placeholder="Correo electrónico">
+            <input type="text" required placeholder="Nombre" class="input">
+            <input type="email" required placeholder="Correo electrónico" class="input">
             <input type="submit" value="Suscribirme">
           </form>
         </div>
