--- a/nemium-b.html
+++ b/nemium-b.html
@@ -41,9 +41,9 @@
       <div class="header-content">
         <header>
           <nav>
-            <details class="variant">
+            <details class="variant" open>
               <summary>
-                <p>Variantes del proyecto</p>
+                <p class="summary-title">Variantes del proyecto</p>
               </summary>
               <ul>
                 <li><a href="./index.html"> Nemium A</a></li>
@@ -53,10 +53,13 @@
                 <li>Nemium E</li>
               </ul>
             </details>
+          </nav>
 
+          <nav class="list-menu">
+            <p class="summary-title">Contenido</p>
             <details>
               <summary>
-                <p>Contenido</p>
+                <p>Setup</p>
               </summary>
               <ol>
                 <li>
