--- a/nemium-b.html
+++ b/nemium-b.html
@@ -48,7 +48,7 @@
               <ul>
                 <li><a href="./index.html"> Nemium A</a></li>
                 <li class="is-active">Nemium B</li>
-                <li>Nemium C</li>
+                <li><a href="./nemium-c.html"> Nemium C</a></li>
                 <li>Nemium D</li>
                 <li>Nemium E</li>
               </ul>
