--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li class="is-active">Nemium A</li>
                 <li><a href="./nemium-b.html"> Nemium B</a></li>
-                <li>Nemium C</li>
+                <li><a href="./nemium-c.html"> Nemium C</a></li>
                 <li>Nemium D</li>
                 <li>Nemium E</li>
               </ul>
