--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <li class="is-active">Nemium A</li>
                 <li><a href="./nemium-b.html"> Nemium B</a></li>
                 <li><a href="./nemium-c.html"> Nemium C</a></li>
-                <li>Nemium D</li>
-                <li>Nemium E</li>
+                <li><a href="./nemium-d.html"> Nemium D</a></li>
+                <li><a href="./nemium-e.html"> Nemium E</a></li>
               </ul>
             </details>
           </nav>
