--- a/nemium-b.html
+++ b/nemium-b.html
@@ -49,8 +49,8 @@
                 <li><a href="./index.html"> Nemium A</a></li>
                 <li class="is-active">Nemium B</li>
                 <li><a href="./nemium-c.html"> Nemium C</a></li>
-                <li>Nemium D</li>
-                <li>Nemium E</li>
+                <li><a href="./nemium-d.html"> Nemium D</a></li>
+                <li><a href="./nemium-e.html"> Nemium E</a></li>
               </ul>
             </details>
           </nav>
