--- a/nemium-c.html
+++ b/nemium-c.html
@@ -64,8 +64,8 @@
                       <li><a href="./index.html"> Nemium A</a></li>
                       <li><a href="./nemium-b.html"> Nemium B</a></li>
                       <li class="is-active">Nemium C</li>
-                      <li>Nemium D</li>
-                      <li>Nemium E</li>
+                      <li><a href="./nemium-d.html"> Nemium D</a></li>
+                      <li><a href="./nemium-e.html"> Nemium E</a></li>
                     </ul>
                   </details>
                 </nav>
